@@ -1,3 +1,7 @@
+2015-06-06  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf_getsrclines.c (read_srclines): Initialize filelist early.
+
 2015-05-27  Mark Wielaard  <mjw@redhat.com>
 
 	* encoded-value.h (read_encoded_value): Check data d_size contains
